<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_userName"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:background="@drawable/edittext_bg"
                android:hint="Email address"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />

            <EditText
                android:id="@+id/login_passWord"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/edittext_bg"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_userName" />
            <TextView
                android:id="@+id/login_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/login_passWord"
                app:layout_constraintEnd_toEndOf="@id/login_passWord"
                android:text="Forgot password?"
                android:textColor="#3d82eb"
                android:textSize="15sp"
                android:layout_marginTop="5dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/button_login"
                android:onClick="logIn"
                android:text="Sign In"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_passWord" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>